<resources>
    <string name="app_name">Curriculum</string>

    <!--iconfont字体图标-->
    <string name="tab_left">&#xe620; </string> <!--左对齐-->
    <string name="tab_right">&#xe618; </string> <!--右对齐-->
    <string name="ic_hot">&#xe66d; </string> <!--火-->
    <string name="ic_return">&#xe6e5; </string> <!--返回-->
    <string name="ic_share">&#xe66c; </string> <!--分享-->
    <string name="ic_search">&#xe6a8; </string> <!--搜索-->
    <string name="ic_collect_nor">&#xe63c; </string> <!--未收藏-->
    <string name="ic_collect_sel">&#xe63b; </string> <!--已收藏-->
    <string name="ic_about">&#xe7ca; </string> <!--关于-->
    <string name="ic_close">&#xe80b; </string> <!--关闭的叉-->
    <string name="ic_home">&#xe611; </string> <!--首页-->
    <string name="ic_type">&#xe654; </string> <!--分类-->
    <string name="ic_user">&#xe652; </string> <!--用户-->
    <string name="ic_more">&#xe62b; </string> <!--更多-->

    <string name="search">搜索</string>
    <string name="search_result">SearchResult</string>

    <!--有关系统权限-->
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>

    <!--有关用户登陆部分的String-->
    <string name="menu_user">登录</string>
    <string name="menu_logout">注销</string>
    <string name="message_login_success">登录成功</string>
    <string name="message_login_fail">登录失败</string>
    <string name="message_register_success">注册成功</string>
    <string name="message_register_failed">注册失败</string>
    <string name="message_add_calendar_ok">添加成功</string>

    <string name="text_calendar_title">标题</string>
    <string name="text_OK">确定</string>
    <string name="config_file_path">config</string>
    <string name="text_username">用户名</string>
    <string name="text_password">密码</string>
    <string name="text_confirm">确认密码</string>
    <string name="text_register">注册</string>
    <string name="text_password_confirm_failed">密码不一致</string>
    <string name="text_password_empty">密码为空</string>
    <string name="server_url">http://192.168.1.102:3000/json</string>

    <string name="video_offline">缓存</string>
    <string name="video_attention">+ 关注</string>
    <string name="video_end"> - The End-</string>

    <string name="nickname">Jiwenjie</string>
    <string name="view_homepage">查看项目主页 ></string>

    <string name="collection">收藏</string>
    <string name="comment">评论</string>
    <string name="mine_message">我的消息</string>
    <string name="mine_attention">我的关注</string>
    <string name="mine_cache">我的缓存</string>
    <string name="view_history">阅读记录</string>
    <string name="about_my_team">关于我们</string>
    <string name="new_detail">新闻详情</string>

    <string name="loading_text">加载中&#8230;</string>
    <string name="no_network">请检查网络后点击重新加载</string>
    <string name="data_error">数据获取失败(ㄒoㄒ)~~</string>
    <string name="empty_view_hint">暂时木有内容呀~~</string>

    <string name="not_use_commercial">本APP只供学习交流和研究之用，\n请勿用作商业用途！</string>
    <string name="splash_copyright">copyright ©2018 TenTeam.</string>
    <string name="gitHub">GitHub</string>

    <string name="splash_slogan">Go through the every bit of life</string>
    <string name="splash_version">V 1.0.0</string>
    
    <string name="team02">我叫齐亚欣，是合师2015级软件2班的学习委员，性格活泼开朗。热爱学习，
        平时和同学友好相处，多次参加各种活动，获得过三好学生等奖状。是我们第十小组的重要贡献者。</string>

    <string name="team01">我叫陈柳扬，预备党员，家住扬州，合肥师范学院2015级软件工程2班学生；
        待人和善。平时和同学老师和睦相处，热爱学习，多次获得过校级奖学金，优良学风个人等奖状
        是我们第十小组的重要贡献者。</string>

    <string name="team03">我叫吉文杰，预备党员，安徽省凤阳县人，是15级软件工程2班的学生，热爱学习，热爱Android，
        热爱代码，不爱bug，
        平时和同学友好相处，乐于助人。多次参加各种比赛和活动，连续获得校级奖学金。
        是我们第十小组的重要贡献者。</string>

</resources>
