<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_title_bg"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_title_bg">

        <TextView
            android:id="@+id/tv_mine"
            android:text="我的"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/iv_about"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:src="@drawable/ic_about" />

    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/img_avatar"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/team_name"
        android:textColor="@color/color_black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_view_homepage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_common_d"
        android:paddingBottom="@dimen/padding_common_d"
        android:layout_gravity="center_horizontal"
        android:text="@string/view_homepage"
        android:textColor="@color/color_gray"
        android:textSize="@dimen/textSize_small" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_collection"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawablePadding="7dp"
                android:drawableStart="@drawable/ic_action_collection"
                android:gravity="center"
                android:text="@string/collection" />
        </LinearLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@color/color_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_comment"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:drawablePadding="7dp"
                android:drawableStart="@drawable/ic_action_comment"
                android:gravity="center"
                android:text="@string/comment" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="15dp"
        android:background="@color/color_gray" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_mine_message"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center|center_horizontal"
                android:text="@string/mine_message"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_mine_attention"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center|center_horizontal"
                android:text="@string/mine_attention"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_mine_cache"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center|center_horizontal"
                android:text="@string/mine_cache"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_feedback"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center|center_horizontal"
                android:text="@string/about_my_team"
                android:textSize="14sp" />

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


</LinearLayout>