<?xml version="1.0" encoding="utf-8"?>
<!--about my team part-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/alpha_05_white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/about_my_title"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.root.curriculum.util.IconFontTextView
            android:id="@+id/about_return"
            android:text="@string/ic_return"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/about_title"
            android:text="@string/about_my_team"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_20"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_below="@id/about_my_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_marginTop="@dimen/dp_48"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="@color/black"
                    android:layout_margin="@dimen/dp_10"
                    app:cardCornerRadius="@dimen/dp_10">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_gravity="center"
                        android:src="@drawable/team02" />

                </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/team02"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_margin="@dimen/dp_10"
                android:layout_height="0.5dp"
                android:background="@color/black" />

            <android.support.v7.widget.CardView
                android:layout_marginTop="@dimen/dp_48"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@color/black"
                android:layout_margin="@dimen/dp_10"
                app:cardCornerRadius="@dimen/dp_10">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:src="@drawable/team01" />

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/team01"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_margin="@dimen/dp_10"
                android:layout_height="0.5dp"
                android:background="@color/black" />

            <android.support.v7.widget.CardView
                android:layout_marginTop="@dimen/dp_48"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@color/black"
                android:layout_margin="@dimen/dp_10"
                app:cardCornerRadius="@dimen/dp_10">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:src="@drawable/team03" />

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/team03"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>
</RelativeLayout>