<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/display_new_detail"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.root.curriculum.util.IconFontTextView
            android:id="@+id/about_return"
            android:text="@string/ic_return"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/about_title"
            android:text="@string/new_detail"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_20"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/img_dis"
        android:layout_marginTop="@dimen/dp_56"
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="250dp" />

    <ScrollView
        android:id="@+id/content"
        android:layout_marginTop="306dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/new_desc"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_margin="@dimen/sp_18"
            android:text="测试数据"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </ScrollView>

    <!--显示错误界面-->
    <LinearLayout
        android:id="@+id/display_error"
        android:layout_marginTop="@dimen/dp_56"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/dp_200"
            android:layout_height="@dimen/dp_200"
            android:layout_gravity="center"
            android:src="@drawable/ic_error"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/color_gray"
            android:text="@string/data_error" />

    </LinearLayout>

</RelativeLayout>